--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second website in github</title>
+    <link rel="stylesheet" href="styles/blogs.css">
 </head>
 <body>
-    
+    <div>
+        <h2>This is the first blog</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum quaerat sint, reprehenderit esse atque aliquid aperiam praesentium tempora delectus quis? Quibusdam expedita exercitationem at quam cum placeat soluta facere cupiditate!</p>
+    </div>
 </body>
 </html>
