adding the list part

--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
         <h2>This is the first blog</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum quaerat sint, reprehenderit esse atque aliquid aperiam praesentium tempora delectus quis? Quibusdam expedita exercitationem at quam cum placeat soluta facere cupiditate!</p>
     </div>
+    <div>
+        <h3>How to add incremental code in github</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m "add a meaning full commit message"</li>
+            <li>git push</li>
+
+        </ul>
+    </div>
 </body>
 </html>
