--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/blogs.css">
 </head>
 <body>
-    <div>
+    <div class="blog1">
         <h2>This is the first blog</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum quaerat sint, reprehenderit esse atque aliquid aperiam praesentium tempora delectus quis? Quibusdam expedita exercitationem at quam cum placeat soluta facere cupiditate!</p>
     </div>
@@ -19,6 +19,10 @@
             <li>git push</li>
 
         </ul>
+    </div>
+    <div class="blog2">
+        <h2>Ruwaifi Rahman Chowdhury</h2>
+        <img src="images/Ruwaifi.jpg" alt="">
     </div>
 </body>
 </html>
